<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.beetzung.quizgame.ui.home.HomeFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/createGame"
            app:destination="@id/createFragment" />
        <action
            android:id="@+id/joinGame"
            app:destination="@id/joinFragment" />
    </fragment>
    <fragment
        android:id="@+id/createFragment"
        android:name="com.beetzung.quizgame.ui.create.CreateFragment"
        android:label="@string/title_new_game" />
    <fragment
        android:id="@+id/gameFragment"
        android:name="com.beetzung.quizgame.ui.game.GameFragment"
        android:label="@string/app_name" />

    <action
        android:id="@+id/openGame"
        app:destination="@id/gameFragment"
        app:popUpTo="@id/homeFragment" />
    <fragment
        android:id="@+id/joinFragment"
        android:name="com.beetzung.quizgame.ui.join.JoinFragment"
        android:label="@string/title_join_game" />
</navigation>